@startuml

class Chess{
    games: List<Board>
}

class Position{
    x: int
    y: int
}

class Board{
    squares: Map<Position, Square>

    removePiece(piece: Piece): void
    getPieceAt(Square): Piece
    setPieceAt(Square, Piece): void
    movePiece(piece: Piece, position: Position): void
}

class Square{
    piece: Piece

    isEmpty(): boolean
    + getPiece(): Optional<Piece>
    + setPiece(piece: Piece): void
}

class Piece{
    isWhite: boolean
    pieceType: enum
    move(position: Position): void
}

Chess <-- Board
Square <-- Piece
Board <-- Square
Board <-- Position
Square -> Position



@enduml